[tool.poetry]
name = "amis-python"
version = "2.0.0"
description = "基于百度amis前端框架的python pydantic模型封装。"
authors = ["CMHopeSunshine <277073121@qq.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["amis"]
homepage = "https://github.com/CMHopeSunshine/amis-python"
repository = "https://github.com/CMHopeSunshine/amis-python"
documentation = "https://github.com/CMHopeSunshine/amis-python#readme"
packages = [{ include = "amis" }]


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pre-commit = "^3.1.0"

[tool.ruff]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "Q",   # flake8-quotes
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RSE", # flake8-raise
    "T20", # flake8-print
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "ISC", # flake8-implicit-str-concat
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "B",   # flake8-bugbear
]
ignore = ["E402", "B008", "F403", "F405", "B005"]
line-length = 120
target-version = "py38"
ignore-init-module-imports = true


[tool.ruff.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]
force-wrap-aliases = true
combine-as-imports = true
order-by-type = false
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "first-party",
    "local-folder",
    "third-party",
]

[tool.ruff.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 120

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
